--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -9,9 +9,10 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Login to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USER }}
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout
         uses: actions/checkout@v2
